typos and safe operator

--- a/app/views/publish/courses/draft_rollover/edit.html.erb
+++ b/app/views/publish/courses/draft_rollover/edit.html.erb
@@ -23,7 +23,7 @@
 
       <h1 class="govuk-heading-l">
         <span class="govuk-caption-l"><%= @course.name_and_code %></span>
-        Are you sure you want to roll over the course into the next recruitement cycle?
+        Are you sure you want to roll over the course into the next recruitment cycle?
       </h1>
 
       <%= f.govuk_submit "Roll over course", class: "govuk-button", data: { qa: "course__rollover-course" } %>
