Define RESTful actions instead of custom

--- a/app/views/support/providers/users_check/show.html.erb
+++ b/app/views/support/providers/users_check/show.html.erb
@@ -1,11 +1,12 @@
 <%= render PageTitle::View.new(title: t("support.providers.users.check")) %>
 <% content_for :before_content do %>
-  <%= govuk_back_link_to(new_support_provider_user_path) %>
+  <%= govuk_back_link_to(new_support_provider_users_path) %>
 <% end %>
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds-from-desktop">
-    <%= form_with(model: @user_form, url: check_support_provider_users_path, local: true) do |f| %>
+    <%= form_with(model: @user_form, url: support_provider_users_path, method: :put, local: true) do |f| %>
+
       <%= f.hidden_field(:email, value: @user_form.email) %>
 
       <fieldset class="govuk-fieldset">
@@ -16,19 +17,19 @@
           component.row do |row|
             row.key { t("support.providers.users.first_name") }
             row.value(text:  @user_form.first_name)
-            row.action(text: t("change"), href: new_support_provider_user_path(@provider), classes: "first_name", visually_hidden_text: t("support.providers.users.first_name"))
+            row.action(text: t("change"), href: new_support_provider_users_path(@provider), classes: "first_name", visually_hidden_text: t("support.providers.users.first_name"))
           end
 
           component.row do |row|
             row.key { t("support.providers.users.last_name") }
             row.value(text: @user_form.last_name)
-            row.action(text: t("change"), href: new_support_provider_user_path(@provider), classes: "last_name", visually_hidden_text: t("support.providers.users.last_name"))
+            row.action(text: t("change"), href: new_support_provider_users_path(@provider), classes: "last_name", visually_hidden_text: t("support.providers.users.last_name"))
           end
 
           component.row do |row|
             row.key { t("support.providers.users.email") }
             row.value(text: @user_form.email)
-            row.action(text: t("change"), href: new_support_provider_user_path(@provider), classes: "email", visually_hidden_text: t("support.providers.users.email"))
+            row.action(text: t("change"), href: new_support_provider_users_path(@provider), classes: "email", visually_hidden_text: t("support.providers.users.email"))
           end
         end %>
 
