--- a/app/views/support/providers/users/delete.html.erb
+++ b/app/views/support/providers/users/delete.html.erb
@@ -3,14 +3,14 @@
 <%= content_for(:breadcrumbs) do %>
   <%= render GovukComponent::BackLinkComponent.new(
     text: "Back",
-    href: support_provider_user_path(@provider, @user),
+    href: support_provider_user_path(@provider, @provider_user),
   ) %>
 <% end %>
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-l">
-      <span class="govuk-caption-l"><%= "#{@user.full_name} - #{@provider.provider_name}" %></span>
+      <span class="govuk-caption-l"><%= "#{@provider_user.full_name} - #{@provider.provider_name}" %></span>
         <%= t("components.page_titles.support.providers.users.delete") %>
     </h1>
 
@@ -23,12 +23,12 @@
     </div>
 
     <%= govuk_button_to "Remove user",
-        delete_support_provider_user_path(@provider, @user),
+        delete_support_provider_user_path(@provider, @provider_user),
         method: :delete,
         class: "govuk-button--warning" %>
 
     <p class="govuk-body">
-      <%= govuk_link_to("Cancel", support_provider_user_path(@provider, @user)) %>
+      <%= govuk_link_to("Cancel", support_provider_user_path(@provider, @provider_user)) %>
     </p>
   </div>
 </div>
