--- a/app/views/publish/courses/course_button_panel/_withdrawn.html.erb
+++ b/app/views/publish/courses/course_button_panel/_withdrawn.html.erb
@@ -2,5 +2,5 @@
   Withdrawn on <%= l(course.withdrawn_at.to_datetime, format: :last_event) %>
 </span>
 <p class="govuk-body">
-<%= govuk_link_to "Preview course", preview_publish_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code), "data-qa": "course__preview-link" %>
+<%= govuk_link_to "Preview course", preview_publish_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code), data: { qa: "course__preview-link" } %>
 </p>
