Fix support provider paths and forms
Bringing this in line with the recruitment cycle scope

--- a/app/components/providers/provider_list/view.html.erb
+++ b/app/components/providers/provider_list/view.html.erb
@@ -2,7 +2,7 @@
       component.row do |row|
         row.key { "Name" }
         row.value { @provider.provider_name }
-        row.action(text: "Change", href: edit_support_provider_url(@provider), visually_hidden_text: "provider name")
+        row.action(text: "Change", href: edit_support_recruitment_cycle_provider_path(@provider.recruitment_cycle_year, @provider), visually_hidden_text: "provider name")
       end
 
       component.row do |row|
@@ -20,7 +20,7 @@
       component.row do |row|
         row.key { "Provider type" }
         row.value { formatted_provider_type }
-        row.action(text: "Change", href: edit_support_provider_url(@provider), visually_hidden_text: "provider type")
+        row.action(text: "Change", href: edit_support_recruitment_cycle_provider_path(@provider.recruitment_cycle_year, @provider), visually_hidden_text: "provider type")
       end
 
       component.row do |row|
