--- a/app/views/support/locations/edit.html.erb
+++ b/app/views/support/locations/edit.html.erb
@@ -4,15 +4,15 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds-from-desktop">
-    <%= render partial: "form", locals: { site: @site, form_url: support_provider_location_path } %>
+    <%= render partial: "form", locals: { site: @site, form_url: support_recruitment_cycle_provider_location_path } %>
 
     <p class="govuk-body">
-      <%= govuk_link_to(t("cancel"), support_provider_locations_path) %>
+      <%= govuk_link_to(t("cancel"), support_recruitment_cycle_provider_locations_path) %>
     </p>
 
     <p class="govuk-body">
       <%= govuk_button_to t("support.actions.delete", resource: "location"),
-          support_provider_location_path(@provider, @site),
+          support_recruitment_cycle_provider_location_path(@provider.recruitment_cycle_year, @provider, @site),
           method: :delete,
           class: "govuk-button govuk-button--warning" %>
     </p>
