--- a/app/views/layouts/provider_record.html.erb
+++ b/app/views/layouts/provider_record.html.erb
@@ -4,17 +4,17 @@
   <%= content_for(:breadcrumbs) do %>
     <%= render GovukComponent::BackLinkComponent.new(
       text: "All provider records",
-      href: support_providers_path,
+      href: support_recruitment_cycle_providers_path,
     ) %>
   <% end %>
 
   <h1 class="govuk-heading-l"><%= @provider.provider_name %></h1>
 
   <%= render TabNavigation::View.new(items: [
-    { name: "Details", url: support_provider_path(@provider) },
-    { name: "Users", url: support_provider_users_path(@provider) },
-    { name: "Courses", url: support_provider_courses_path(@provider) },
-    { name: "Locations", url: support_provider_locations_path(@provider) },
+    { name: "Details", url: support_recruitment_cycle_provider_path(@provider.recruitment_cycle_year, @provider) },
+    { name: "Users", url: support_recruitment_cycle_provider_users_path(@provider.recruitment_cycle_year, @provider) },
+    { name: "Courses", url: support_recruitment_cycle_provider_courses_path(@provider.recruitment_cycle_year, @provider) },
+    { name: "Locations", url: support_recruitment_cycle_provider_locations_path(@provider.recruitment_cycle_year, @provider) },
   ]) %>
 
   <%= yield %>
