--- a/app/views/support/courses/edit.html.erb
+++ b/app/views/support/courses/edit.html.erb
@@ -3,7 +3,7 @@
 <h1 class="govuk-heading-l">Edit course details</h1>
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds-from-desktop">
-    <%= form_with model: @edit_course_form, url: support_provider_course_path, method: :patch do |f| %>
+    <%= form_with model: @edit_course_form, url: support_recruitment_cycle_provider_course_path(@provider.recruitment_cycle_year, @provider), method: :patch do |f| %>
 
       <%= f.govuk_error_summary %>
 
@@ -23,7 +23,7 @@
     <% end %>
 
     <p class="govuk-body">
-      <%= govuk_link_to(t("cancel"), support_provider_courses_path) %>
+      <%= govuk_link_to(t("cancel"), support_recruitment_cycle_provider_courses_path) %>
     </p>
   </div>
 </div>
