--- a/app/views/support/providers/edit.html.erb
+++ b/app/views/support/providers/edit.html.erb
@@ -2,8 +2,9 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds-from-desktop">
-    <%= form_with model: [:support, @provider], local: true do |f| %>
+    <%= form_with model: @provider, url: support_recruitment_cycle_provider_path(@provider.recruitment_cycle_year, @provider), local: true do |f| %>
 
+      <%#= form_with url: support_recruitment_cycle_provider_path(@provider.recruitment_cycle_year, @provider), local: true do |f| %>
       <%= f.govuk_error_summary %>
 
       <%= f.govuk_text_field :provider_name, label: { text: "Provider name", size: "m" } %>
@@ -19,7 +20,7 @@
     <% end %>
 
     <p class="govuk-body">
-      <%= govuk_link_to(t("cancel"), support_provider_path) %>
+      <%= govuk_link_to(t("cancel"), support_recruitment_cycle_provider_path) %>
     </p>
   </div>
 </div>
