--- a/app/views/support/users/show.html.erb
+++ b/app/views/support/users/show.html.erb
@@ -2,25 +2,25 @@
       component.row do |row|
         row.key { "First name" }
         row.value(text: @user.first_name, html_attributes: { id: "first_name" })
-        row.action(text: "Change", href: edit_support_user_path(@user), visually_hidden_text: "first name")
+        row.action(text: "Change", href: edit_support_recruitment_cycle_user_path(params[:recruitment_cycle_year], @user), visually_hidden_text: "first name")
       end
 
       component.row do |row|
         row.key { "Last name" }
         row.value(text: @user.last_name, html_attributes: { id: "last_name" })
-        row.action(text: "Change", href: edit_support_user_path(@user), visually_hidden_text: "last name")
+        row.action(text: "Change", href: edit_support_recruitment_cycle_user_path(params[:recruitment_cycle_year], @user), visually_hidden_text: "last name")
       end
 
       component.row do |row|
         row.key { "Email" }
         row.value(text: @user.email, html_attributes: { id: "email" })
-        row.action(text: "Change", href: edit_support_user_path(@user), visually_hidden_text: "email")
+        row.action(text: "Change", href: edit_support_recruitment_cycle_user_path(params[:recruitment_cycle_year], @user), visually_hidden_text: "email")
       end
 
       component.row do |row|
         row.key { "Admin?" }
         row.value(text: @user.admin?.to_s.capitalize, html_attributes: { id: "admin_status" })
-        row.action(text: "Change", href: edit_support_user_path(@user), visually_hidden_text: "admin")
+        row.action(text: "Change", href: edit_support_recruitment_cycle_user_path(params[:recruitment_cycle_year], @user), visually_hidden_text: "admin")
       end
 
       component.row do |row|
@@ -31,6 +31,6 @@
     end %>
 
 <%= govuk_button_to("Delete this user",
-      support_user_path(@user),
+      support_recruitment_cycle_user_path(params[:recruitment_cycle_year], @user),
       method: :delete,
       class: "govuk-button govuk-button--warning") %>
