--- a/app/views/layouts/user_record.html.erb
+++ b/app/views/layouts/user_record.html.erb
@@ -4,15 +4,15 @@
   <%= content_for(:breadcrumbs) do %>
     <%= render GovukComponent::BackLinkComponent.new(
       text: "All user records",
-      href: support_users_path,
+      href: support_recruitment_cycle_users_path(params[:recruitment_cycle_year]),
     ) %>
   <% end %>
 
   <h1 class="govuk-heading-l"><%= @user.full_name %></h1>
 
   <%= render TabNavigation::View.new(items: [
-    { name: "Details", url: support_user_path(@user) },
-    { name: "Providers", url: support_user_providers_path(@user) },
+    { name: "Details", url: support_recruitment_cycle_user_path(params[:recruitment_cycle_year], @user) },
+    { name: "Providers", url: support_recruitment_cycle_user_providers_path(params[:recruitment_cycle_year], @user) },
   ]) %>
 
   <%= yield %>
