--- a/app/views/support/users/index.html.erb
+++ b/app/views/support/users/index.html.erb
@@ -5,7 +5,7 @@
 <%= render "support/menu" %>
 
 <div class="govuk-button-group">
-  <%= link_to "Add a user", new_support_user_path, class: "govuk-button govuk-button--primary" %>
+  <%= link_to "Add a user", new_support_recruitment_cycle_user_path, class: "govuk-button govuk-button--primary" %>
   <%= link_to "Download users (CSV)", support_data_exports_path(anchor: "users"), class: "govuk-button govuk-button--secondary" %>
 </div>
 
