--- a/app/views/support/users/new.html.erb
+++ b/app/views/support/users/new.html.erb
@@ -3,13 +3,13 @@
 <%= content_for(:breadcrumbs) do %>
     <%= render GovukComponent::BackLinkComponent.new(
       text: "All User records",
-      href: support_users_path,
+      href: support_recruitment_cycle_users_path,
     ) %>
 <% end %>
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds-from-desktop">
-    <%= form_with model: [:support, @user], local: true do |f| %>
+    <%= form_with model: [:support_recruitment_cycle, @user], local: true do |f| %>
       <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
           <h1 class="govuk-fieldset__heading">Add a new user</h1>
@@ -25,6 +25,6 @@
       </fieldset>
     <% end %>
 
-    <%= govuk_link_to(t("cancel"), support_users_path) %>
+    <%= govuk_link_to(t("cancel"), support_recruitment_cycle_users_path) %>
   </div>
 </div>
