--- a/app/views/support/allocation_uplifts/edit.html.erb
+++ b/app/views/support/allocation_uplifts/edit.html.erb
@@ -5,13 +5,13 @@
 <%= content_for(:breadcrumbs) do %>
     <%= render GovukComponent::BackLinkComponent.new(
       text: "Allocation record for #{@allocation_uplift.provider.provider_name}",
-      href: support_allocation_path(@allocation_uplift.allocation.id),
+      href: support_recruitment_cycle_allocation_path(params[:recruitment_cycle_year], @allocation_uplift.allocation.id),
     ) %>
 <% end %>
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds-from-desktop">
-    <%= form_with model: [@allocation, @allocation_uplift], url: support_allocation_uplift_path, local: true, method: :patch do |f| %>
+    <%= form_with model: [@allocation, @allocation_uplift], url: support_recruitment_cycle_allocation_uplift_path(params[:recruitment_cycle_year]), local: true, method: :patch do |f| %>
 
     <%= f.govuk_error_summary %>
 
@@ -19,6 +19,6 @@
     <%= f.govuk_submit %>
     <% end %>
 
-    <%= govuk_link_to(t("cancel"), support_allocation_path(@allocation_uplift)) %>
+    <%= govuk_link_to(t("cancel"), support_recruitment_cycle_allocation_path(params[:recruitment_cycle_year], @allocation_uplift)) %>
   </div>
 </div>
