--- a/app/views/support/allocation_uplifts/new.html.erb
+++ b/app/views/support/allocation_uplifts/new.html.erb
@@ -5,13 +5,13 @@
 <%= content_for(:breadcrumbs) do %>
     <%= render GovukComponent::BackLinkComponent.new(
       text: "Allocation record for #{@allocation_uplift.provider.provider_name}",
-      href: support_allocation_path(@allocation_uplift.allocation.id),
+      href: support_recruitment_cycle_allocation_path(params[:recruitment_cycle_year], @allocation_uplift.allocation.id),
     ) %>
 <% end %>
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds-from-desktop">
-    <%= form_with model: [:support, @allocation_uplift], local: true do |f| %>
+    <%= form_with model: [:support_recruitment_cycle, @allocation_uplift], local: true do |f| %>
 
       <%= f.govuk_error_summary %>
 
@@ -20,7 +20,7 @@
     <% end %>
 
     <p class="govuk-body">
-      <%= govuk_link_to(t("cancel"), support_allocation_path(@allocation)) %>
+      <%= govuk_link_to(t("cancel"), support_recruitment_cycle_allocation_path(params[:recruitment_cycle_year], @allocation)) %>
     </p>
   </div>
 </div>
