--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,6 +68,10 @@
            <%= render TitleBar::View.new(title: @provider.provider_name, provider: @provider.provider_code, current_user:) %>
           <% end %>
         <% end %>
+
+        <% if params[:controller].start_with?("support") %>
+          <%= render SupportTitleBar::View.new %>
+        <% end %>
       </div>
 
     <%= render partial: "publish/shared/navigation_bar" %>
