--- a/app/views/publish/courses/preview/_contact_details.html.erb
+++ b/app/views/publish/courses/preview/_contact_details.html.erb
@@ -1,5 +1,5 @@
 <div id="contact_section" class="govuk-!-margin-bottom-8">
-  <h2 class="govuk-heading-l" id="section-contact">Contact details</h2>
+  <h2 class="govuk-heading-l" id="section-contact">Contact this training provider</h2>
 
   <div class="course-basicinfo">
     <dl class="app-description-list">
