--- a/app/views/publish/courses/preview/_advice.html.erb
+++ b/app/views/publish/courses/preview/_advice.html.erb
@@ -1,11 +1,16 @@
-<h3 class="govuk-heading-l" id="section-advice">Support and advice</h3>
-<p class="govuk-body">For questions about this course you should contact the training provider using <%= govuk_link_to "the contact details above", "#contact_section" %>.</p>
+<div class="govuk-!-margin-bottom-8">
+  <h3 class="govuk-heading-l" id="section-advice">Support and advice</h3>
+  <p class="govuk-body">For support and advice, you can speak to a <%= govuk_link_to "teacher training adviser", t("get_into_teaching.url_get_an_advisor") %>
+  for free. They’re all experienced teachers who can help you to prepare your application, book school
+    experience, and access exclusive teaching events.</p>
+  <p class="govuk-body">You can also call <%= t("service_name.get_into_teaching") %> free of charge on <%= t("get_into_teaching.tel") %>, or
+    <%= govuk_link_to "chat online", t("get_into_teaching.url_online_chat") %>
+    <%= t("get_into_teaching.opening_times") %> (except public holidays).</p>
 
-<h4 class="govuk-heading-m">Get support and advice about teaching</h4>
-<p class="govuk-body">Register with <%= govuk_link_to "Get Into Teaching", "https://getintoteaching.education.gov.uk/user/register" %>, the Department for Education’s free support and advice service, for personalised guidance from teaching experts. They can help you to prepare your application, book school experience, and access exclusive teaching events. You can also call them free of charge on 0800 389 2500, or speak to an adviser using their <%= govuk_link_to "online chat service", "https://getintoteaching.education.gov.uk/lp/live-chat" %>, from 8am to 8pm, Monday to Friday.</p>
+  <p class="govuk-body">Find out about the different
+  <%= govuk_link_to("ways to train", t("get_into_teaching.url_ways_to_train")) %>
+  if you do not have a degree, or are already an experienced teacher.</p>
 
-<h4 class="govuk-heading-m">Website support</h4>
-<p class="govuk-body">If you have feedback or have had a problem using Find postgraduate teacher training you can <%= bat_contact_mail_to "contact us by email" %>.</p>
-
-<h4 class="govuk-heading-m">Is there something wrong with this page?</h4>
-<p class="govuk-body">If there is something wrong with this course listing, <%= bat_contact_mail_to "contact us by email", subject: "Edit #{course.name} (#{course.provider_code}/#{course.course_code})" %>.</p>
+  <h4 class="govuk-heading-m">Is there something wrong with this page?</h4>
+  <p class="govuk-body">If there is something wrong with this course listing, <%= bat_contact_mail_to("contact us by email", subject: "Edit #{course.name} (#{course.provider_code}/#{course.course_code})") %>.</p>
+</div>
