--- a/app/views/publish/courses/preview/_fees_and_financial_support.html.erb
+++ b/app/views/publish/courses/preview/_fees_and_financial_support.html.erb
@@ -1,5 +1,9 @@
 <div class="govuk-!-margin-bottom-8">
-  <h2 class="govuk-heading-l" id="section-financial-support">Financial support</h2>
+  <h2 class="govuk-heading-l" id="section-financial-support">Fees and financial support</h2>
+
+  <% if course.has_fees? %>
+    <%= render partial: "publish/courses/preview/fees", locals: { course: } %>
+  <% end %>
 
   <aside class="app-advice">
     <h3 class="app-advice__title">
@@ -20,10 +24,6 @@
       <%= render partial: "publish/courses/preview/financial_support/loan", locals: { course: } %>
     <% end %>
   </aside>
-
-  <% if course.has_fees? %>
-    <%= render partial: "publish/courses/preview/fees", locals: { course: } %>
-  <% end %>
 
   <% if course.financial_support.present? %>
     <h3 data-qa="course__financial_support_details" class="govuk-heading-m">Financial support from the training provider</h3>
