Refactor service_name translations and add find
- Update affected translations

--- a/app/views/cookie_preferences/show.html.erb
+++ b/app/views/cookie_preferences/show.html.erb
@@ -10,7 +10,7 @@
 
       <p class="govuk-body">Cookies are small files saved on your phone, tablet or computer when you visit a website.</p>
 
-      <p class="govuk-body">We use cookies to make <%= t("service_name") %> (Publish) work and collect information about how you use our service.</p>
+      <p class="govuk-body">We use cookies to make <%= t("service_name.publish") %> (Publish) work and collect information about how you use our service.</p>
 
       <h2 class="govuk-heading-m">Essential cookies</h3>
 
