--- a/app/views/layouts/publish.html.erb
+++ b/app/views/layouts/publish.html.erb
@@ -1,7 +1,7 @@
 <%= extends_layout :application do %>
   <%= content_for(:header) do %>
     <%= render Header::View.new(
-      service_name: I18n.t("service_name"),
+      service_name: I18n.t("service_name.publish"),
       current_user:,
     ) %>
   <% end %>
