--- a/app/views/layouts/find_layout.html.erb
+++ b/app/views/layouts/find_layout.html.erb
@@ -21,6 +21,7 @@
 
 <div class="govuk-width-container">
   <%= render FindInterface::PhaseBanner::View.new %>
+  <%= yield %>
   <main class="govuk-main-wrapper" id="main-content" role="main"></main>
 </div>
 
