[0400] Amended to having no active state (blue link)

--- a/app/components/header/view.html.erb
+++ b/app/components/header/view.html.erb
@@ -12,7 +12,7 @@
       <% header.navigation_item(text: "Sign out", href: sign_out_path) %>
     <% else %>
       <% if current_user.associated_with_accredited_body? %>
-        <% header.navigation_item(text: "Notifications", href: publish_notifications_path, active: current_page?(publish_notifications_path)) %>
+        <% header.navigation_item(text: "Notifications", href: publish_notifications_path, active: false) %>
       <% end %>
       <% header.navigation_item(text: "Sign out", href: sign_out_path) %>
       <% header.navigation_item(text: "(#{current_user.first_name} #{current_user.last_name})", href: Settings.dfe_signin.profile) %>
