Use double quotes (ERB fail)

--- a/app/views/layouts/find_layout.html.erb
+++ b/app/views/layouts/find_layout.html.erb
@@ -24,6 +24,6 @@
   <main class="govuk-main-wrapper" id="main-content" role="main"></main>
 </div>
 
-<%= render 'layouts/find_footer' %>
+<%= render "layouts/find_footer" %>
 </body>
 </html>
