--- a/app/views/find/pages/terms.html.erb
+++ b/app/views/find/pages/terms.html.erb
@@ -6,7 +6,7 @@
       <h1 class="govuk-heading-xl">Terms and conditions</h1>
 
       <h2 class="govuk-heading-l">Using our website</h2>
-      <p class="govuk-body">The 'Find postgraduate teacher training' service is maintained for your personal use and viewing. Access and use by you of this site constitutes your acceptance of these terms and conditions. This takes effect from the date on which you first use this website.</p>
+      <p class="govuk-body">The Find postgraduate teacher training service is maintained for your personal use and viewing. Access and use by you of this site constitutes your acceptance of these terms and conditions. This takes effect from the date on which you first use this website.</p>
 
       <h2 class="govuk-heading-l">Linking to Find postgraduate teacher training </h2>
       <p class="govuk-body">We do not object to you linking directly to pages on this site and you do not need to ask permission to do so. However, we do not permit our pages to be loaded into frames on your site. The 'Find postgraduate teacher training' pages must be displayed in the user's entire browser window.</p>
