--- a/app/views/find/pages/terms.html.erb
+++ b/app/views/find/pages/terms.html.erb
@@ -1,4 +1,4 @@
-<%= content_for :page_title, 'Terms and conditions' %>
+<% content_for :page_title, "Terms and conditions" %>
 
 <div class="govuk-width-container">
   <div class="govuk-grid-row">
