--- a/app/views/pages/privacy.html.erb
+++ b/app/views/pages/privacy.html.erb
@@ -1,4 +1,4 @@
-<%= content_for :page_title, 'Privacy policy' %>
+<% content_for :page_title, 'Privacy policy' %>
 
 <div class="govuk-width-container">
   <div class="govuk-grid-row">
@@ -33,13 +33,13 @@
 
       <p class="govuk-body">
         You can find more information about how we handle personal data in our
-        <%= govuk_link_to('personal information charter', 'https://www.gov.uk/government/organisations/department-for-education/about/personal-information-charter') %>.
+        <%= govuk_link_to("personal information charter", "https://www.gov.uk/government/organisations/department-for-education/about/personal-information-charter") %>.
       </p>
 
       <h2 class="govuk-heading-l">The right to lodge a complaint</h2>
       <p class="govuk-body">
         You have the right to raise any concerns with the Information Commissioner’s Office (ICO) via their website at
-        <%= govuk_link_to('https://ico.org.uk/make-a-complaint/', 'https://ico.org.uk/make-a-complaint/') %>.
+        <%= govuk_link_to("https://ico.org.uk/make-a-complaint/", "https://ico.org.uk/make-a-complaint/") %>.
       </p>
 
       <h2 class="govuk-heading-l">Last updated</h2>
