--- a/app/views/pages/privacy.html.erb
+++ b/app/views/pages/privacy.html.erb
@@ -1,4 +1,4 @@
-<% content_for :page_title, 'Privacy policy' %>
+<% content_for :page_title, "Privacy policy" %>
 
 <div class="govuk-width-container">
   <div class="govuk-grid-row">
