--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -24,7 +24,7 @@
               <%= link_to "How to use this service", how_to_use_this_service_path, class: "govuk-footer__link" %>
             </li>
             <li class="govuk-footer__inline-list-item">
-              <%= link_to "Accessibility", find_accessibility_path, class: "govuk-footer__link" %>
+              <%= link_to "Accessibility", accessibility_path, class: "govuk-footer__link" %>
             </li>
             <li class="govuk-footer__inline-list-item">
               <%= link_to "Cookies", cookies_path, class: "govuk-footer__link" %>
