--- a/app/views/find/pages/accessibility.html.erb
+++ b/app/views/find/pages/accessibility.html.erb
@@ -16,15 +16,15 @@
 
     <p class="govuk-body">We’ve also made the text on the service as simple as possible to understand.</p>
 
-    <p class="govuk-body"><%= govuk_link_to "AbilityNet", "https://mcmw.abilitynet.org.uk/" %> has advice on making your device easier to use if you have a disability.</p>
+    <p class="govuk-body"><%= govuk_link_to "AbilityNet", t("links.ability_net") %> has advice on making your device easier to use if you have a disability.</p>
 
     <h2 class="govuk-heading-l">Technical information about this service’s accessibility</h2>
 
     <p class="govuk-body">The Becoming a Teacher team (DfE) is committed to making Find postgraduate teacher training accessible, in accordance with the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018.</p>
 
-    <p class="govuk-body">This website is partially compliant with the <%= govuk_link_to "Web Content Accessibility Guidelines (WCAG) version 2.1", "https://www.w3.org/TR/WCAG21/" %> AA standard, due to the non-compliances listed below.</p>
+    <p class="govuk-body">This website is partially compliant with the <%= govuk_link_to "Web Content Accessibility Guidelines (WCAG) version 2.1", t("links.web_content_accessibility_guidelines") %> AA standard, due to the non-compliances listed below.</p>
 
-    <p class="govuk-body">The service was designed using the <%= govuk_link_to "GOV.UK design system", "https://design-system.service.gov.uk/accessibility/" %>, which conforms to the WCAG 2.1 AA standard. To ensure the service fully meets the WCAG 2.1 AA standard, we are currently arranging an accessibility audit. We will update this page following the audit, and publish details of any accessibility issues identified.</p>
+    <p class="govuk-body">The service was designed using the <%= govuk_link_to "GOV.UK design system", t("links.gov_design_accessibility") %>, which conforms to the WCAG 2.1 AA standard. To ensure the service fully meets the WCAG 2.1 AA standard, we are currently arranging an accessibility audit. We will update this page following the audit, and publish details of any accessibility issues identified.</p>
 
     <h2 class="govuk-heading-l">Reporting accessibility problems with Find postgraduate teacher training</h2>
 
@@ -32,7 +32,7 @@
 
     <h2 class="govuk-heading-l">Enforcement procedure</h2>
 
-    <p class="govuk-body">The Equality and Human Rights Commission (EHRC) is responsible for enforcing the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018 (the ‘accessibility regulations’). If you’re not happy with how we respond to your complaint, <%= govuk_link_to "contact the Equality Advisory and Support Service (EASS)", "https://www.equalityadvisoryservice.com/" %>.</p>
+    <p class="govuk-body">The Equality and Human Rights Commission (EHRC) is responsible for enforcing the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018 (the ‘accessibility regulations’). If you’re not happy with how we respond to your complaint, <%= govuk_link_to "contact the Equality Advisory and Support Service (EASS)", t("links.equality_advisory_service") %>.</p>
 
     <p class="govuk-body">This statement was prepared on 19 September 2019. It was last updated on 23 September 2019.</p>
   </div>
