--- a/app/views/pages/privacy.html.erb
+++ b/app/views/pages/privacy.html.erb
@@ -39,7 +39,7 @@
       <h2 class="govuk-heading-l">The right to lodge a complaint</h2>
       <p class="govuk-body">
         You have the right to raise any concerns with the Information Commissioner’s Office (ICO) via their website at
-        <%= govuk_link_to("https://ico.org.uk/make-a-complaint/", "https://ico.org.uk/make-a-complaint/") %>.
+        <%= govuk_link_to t("links.ico_complaint"), t("links.ico_complaint") %>.
       </p>
 
       <h2 class="govuk-heading-l">Last updated</h2>
