--- a/app/views/find/pages/privacy.html.erb
+++ b/app/views/find/pages/privacy.html.erb
@@ -1,99 +1,52 @@
-<% content_for :page_title, "Privacy policy" %>
+<%= content_for :page_title, 'Privacy policy' %>
 
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
-    <h1 class="govuk-heading-xl">Privacy policy</h1>
+<div class="govuk-width-container">
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+      <h1 class="govuk-heading-xl">Privacy policy</h1>
 
-    <h2 class="govuk-heading-l">Who we are</h2>
-    <p class="govuk-body">This work is being carried out by Department for Education (DfE) Digital, which is a part of DfE. For the purpose of data protection legislation, the DfE is the data controller for the personal data processed as part of Find postgraduate teacher training.</p>
+      <h2 class="govuk-heading-l">Who we are</h2>
+      <p class="govuk-body">This work is being carried out by Department for Education (DfE) Digital, which is a part of DfE. For the purpose of data protection legislation, the DfE is the data controller for the personal data processed as part of Find postgraduate teacher training.</p>
 
-    <h2 class="govuk-heading-l">What personal information we will&nbsp;store</h2>
-    <p class="govuk-body">For all users, we will store:</p>
-    <ul class="govuk-list govuk-list--bullet">
-      <li>part of your IP address to track user journeys. We do not collect IP addresses in their entirety to avoid the personal identification of users</li>
-      <li>email addresses that are shared with us by you</li>
-      <li>telephone numbers that are shared with us by you</li>
-    </ul>
+      <h2 class="govuk-heading-l">How we will use your information</h2>
+      <p class="govuk-body">We receive your personal data in the form of your IP address and are processing it in order to track traffic to the service and continuously improve our service to better meet users needs. In some instances, we may also collect your email address for similar purposes. More information about this work is available if you wish to contact us at <%= bat_contact_mail_to %>.</p>
 
-    <p class="govuk-body">When we create an account for you, we will store:</p>
-    <ul class="govuk-list govuk-list--bullet">
-      <li>name</li>
-      <li>email address</li>
-      <li>personal information such as the name and email of a contact person at your training provider or school, if you choose to share this in a course listing you post to Find postgraduate teacher training</li>
-    </ul>
+      <h3 class="govuk-heading-m">The nature of your personal data we will be using</h3>
+      <p class="govuk-body">The categories of your personal data that we will be using for this project are: IP address and contact information - email address.</p>
 
-    <h2 class="govuk-heading-l">How we will use your information</h2>
-    <p class="govuk-body">
-      We process your anonymised Internet Protocol (IP) address in order to track traffic to the service and continuously improve our service to better meet users needs.
-    </p>
-    <p class="govuk-body">
-      Personally identifiable contact information that is published in course listings may be passed on to a third party that will use our course listing data (UCAS) via an application programming interface (API), as described in our Terms and Conditions, in order to feed their postgraduate teacher training application system. Any personal information provided in a course listing will be subject to the third party's (UCAS) data handling obligations. We are not responsible for how a third party handles any personal information you choose to include in a course listing.
-    </p>
+      <h2 class="govuk-heading-l">Why our use of your personal data is lawful</h2>
+      <p class="govuk-body">In order for our use of your personal data to be lawful, we need to meet one (or more) conditions in the data protection legislation. For the purpose of this project, this processing is necessary to complete a task in the public interest.</p>
 
-    <h2 class="govuk-heading-l">Why our use of your personal data is&nbsp;lawful</h2>
-    <p class="govuk-body">
-      In order for our use of your personal data to be lawful, we need to meet one (or more) conditions in the data protection legislation. For the purpose of this project, this processing is necessary to complete a task in the public interest as stated under GDPR Article 6 (1)(e).
-    </p>
+      <h2 class="govuk-heading-l">How long we will keep your personal data</h2>
+      <p class="govuk-body">We will only keep your personal data for as long as we need it for the purpose(s) of this piece of work, after which point it will be securely destroyed. Please note that under data protection legislation and in compliance with the relevant data processing conditions, we can lawfully keep personal data processed purely for research and statistical purposes indefinitely.</p>
 
-    <h2 class="govuk-heading-l">Who we will make your personal data available&nbsp;to</h2>
-    <p class="govuk-body">
-      We sometimes need to make personal data available to other organisations. These might include contracted partners (who we have employed to process your personal data on our behalf) and/or other organisations (with whom we need to share your personal data for specific purposes).
-    </p>
-    <p class="govuk-body">
-      Where we need to share your personal data with others, we ensure that this data sharing complies with data protection legislation. We share specific types of personal data with our contracted suppliers, who have been contracted by DfE to manage the delivery of the digital service.
-    </p>
+      <h2 class="govuk-heading-l">Your data protection rights</h2>
+      <p class="govuk-body">You have the right:</p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>to ask us for access to information about you that we hold</li>
+        <li>to have your personal data rectified, if it is inaccurate or incomplete</li>
+        <li>to request the deletion or removal of personal data where there is no compelling reason for its continued processing</li>
+        <li>to restrict our processing of your personal data (i.e. permitting its storage but no further processing)</li>
+        <li>to object to direct marketing (including profiling) and processing for the purposes of scientific/historical research and statistics</li>
+        <li>not to be subject to decisions based purely on automated processing where it produces a legal or similarly significant effect on you</li>
+      </ul>
 
-    <p class="govuk-body">Our contracted suppliers use your data data in the following way</p>
-    <ul class="govuk-list govuk-list--bullet">
-      <li>for user research that informs development of the service: if you share your name, email address and phone number our contracted suppliers will store these in its research library</li>
-      <li>
-        for security purposes: our contracted suppliers collect part of the IP addresses of people visiting the Publish teacher training courses website (for example, if we were receiving continuous direct denial of service attacks from an IP address range then we could block it)
-      </li>
-      <li>to enable users to use the service and receive updates: our contracted suppliers collect the names and emails of those publishing course listings on 'Publish teacher training courses'</li>
-    </ul>
+      <p class="govuk-body">
+        You can find more information about how we handle personal data in our
+        <%= govuk_link_to('personal information charter', 'https://www.gov.uk/government/organisations/department-for-education/about/personal-information-charter') %>.
+      </p>
 
-    <h2 class="govuk-heading-l">How long we will keep your personal&nbsp;data</h2>
-    <p class="govuk-body">
-      Neither DfE nor its contracted suppliers will keep your personal data longer than we need it for the purpose(s) of research, security and/or delivery of the service, and in any case not longer than 7 years. Your data will be securely deleted when DfE and its contracted suppliers no longer need it for these purposes, or when 7 years have passed, whichever comes first.
-    </p>
-    <p class="govuk-body">
-      Anonymised IP addresses will be deleted after 26 months.
-    </p>
-    <p class="govuk-body">
-      If you share personal information in a course listing we will retain this while the course is live and for one year after it has expired.
-    </p>
+      <h2 class="govuk-heading-l">The right to lodge a complaint</h2>
+      <p class="govuk-body">
+        You have the right to raise any concerns with the Information Commissioner's Office (ICO) via their website at
+        <%= govuk_link_to t("links.ico_complaint"), t("links.ico_complaint") %>.
+      </p>
 
-    <h2 class="govuk-heading-l">Your data protection rights</h2>
-    <p class="govuk-body">You have the right:</p>
-    <ul class="govuk-list govuk-list--bullet">
-      <li>to ask us for access to information about you that we hold</li>
-      <li>to have your personal data rectified, if it is inaccurate or incomplete</li>
-      <li>to request the deletion or removal of personal data where there is no compelling reason for its continued processing</li>
-      <li>to restrict our processing of your personal data (i.e. permitting its storage but no further processing)</li>
-      <li>to object to direct marketing (including profiling) and processing for the purposes of scientific/historical research and statistics</li>
-      <li>not to be subject to decisions based purely on automated processing where it produces a legal or similarly significant effect on you</li>
-    </ul>
-    <p class="govuk-body">
-      If you need to contact us regarding any of the above, please do so via the DfE site at: <%= govuk_link_to "https://www.gov.uk/contact-dfe", "https://www.gov.uk/contact-dfe" %>.
-    </p>
-    <p class="govuk-body">
-      You can <%= govuk_link_to "find out more about your data protection rights", "https://ico.org.uk/for-organisations/guide-to-data-protection/principle-6-rights" %> on the Information Commissioner's website.
-    </p>
+      <h2 class="govuk-heading-l">Last updated</h2>
+      <p class="govuk-body">This version was last updated on 30 April 2018.</p>
 
-    <h2 class="govuk-heading-l">The right to lodge a complaint</h2>
-    <p class="govuk-body">
-      You have the right to raise any concerns with the Information Commissioner's Office (ICO) via their website at <%= govuk_link_to t("links.ico_complaint"), t("links.ico_complaint") %></a>.
-    </p>
-
-    <h2 class="govuk-heading-l">Contact information</h2>
-    <p class="govuk-body">
-      If you have any questions about how your personal information will be used, please contact us at <%= bat_contact_mail_to %> and enter data privacy as a reference. For the Data Protection Officer (DPO) please contact us via gov.uk and mark it for the attention of the DPO.
-    </p>
-
-    <h2 class="govuk-heading-l">Last updated</h2>
-    <p class="govuk-body">
-      We may need to update this privacy notice periodically so we recommend that you revisit this information from time to time.
-      This version was last updated on 29 June 2018.
-    </p>
+      <h2 class="govuk-heading-l">Contact us</h2>
+      <p class="govuk-body">Email <%= bat_contact_mail_to %> if you have any questions about how your personal information will be processed.</p>
+    </div>
   </div>
 </div>
