--- a/app/views/find/pages/accessibility.html.erb
+++ b/app/views/find/pages/accessibility.html.erb
@@ -40,13 +40,13 @@
       <h3 class="govuk-heading-m">Reporting accessibility problems with this service</h3>
       <p class="govuk-body">
         If you think we're not meeting accessibility requirements, or you'd like to access any information in a different format (such as accessible PDF, large print, easy read, audio recording or braille), contact
-        <%= bat_contact_mail_to(subject: 'Accessibility issues') %>.
+        <%= bat_contact_mail_to(subject: "Accessibility issues") %>.
       </p>
 
       <h3 class="govuk-heading-m">Enforcement procedure</h3>
       <p class="govuk-body">
         The Equality and Human Rights Commission (EHRC) is responsible for enforcing the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018. If you're not happy with how we respond to your complaint,
-        <%= govuk_link_to 'contact the Equality Advisory and Support Service (EASS)', t("links.equality_advisory_service") %>.
+        <%= govuk_link_to "contact the Equality Advisory and Support Service (EASS)", t("links.equality_advisory_service") %>.
       </p>
 
       <p class="govuk-body">This statement was prepared on 19 September 2019. It was last updated on 16 March 2020.</p>
