--- a/app/views/find/pages/privacy.html.erb
+++ b/app/views/find/pages/privacy.html.erb
@@ -33,7 +33,7 @@
 
     <p class="govuk-body">
       You can find more information about how we handle personal data in our
-      <%= govuk_link_to('personal information charter', 'https://www.gov.uk/government/organisations/department-for-education/about/personal-information-charter') %>.
+      <%= govuk_link_to("personal information charter", "https://www.gov.uk/government/organisations/department-for-education/about/personal-information-charter") %>.
     </p>
 
     <h2 class="govuk-heading-l">The right to lodge a complaint</h2>
