--- a/app/views/pages/accessibility.html.erb
+++ b/app/views/pages/accessibility.html.erb
@@ -14,11 +14,11 @@
       <li>listen to most of the content on the service using a screen reader (including the most recent versions of JAWS, NVDA and VoiceOver)</li>
     </ul>
 
-    <p class="govuk-body">We’ve also made the text on the service as simple as possible to understand.</p>
+    <p class="govuk-body">We've also made the text on the service as simple as possible to understand.</p>
 
     <p class="govuk-body"><%= govuk_link_to "AbilityNet", t("links.ability_net") %> has advice on making your device easier to use if you have a disability.</p>
 
-    <h2 class="govuk-heading-l">Technical information about this service’s accessibility</h2>
+    <h2 class="govuk-heading-l">Technical information about this service's accessibility</h2>
 
     <p class="govuk-body">The Becoming a Teacher team (DfE) is committed to making Publish teacher training courses accessible, in accordance with the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018.</p>
 
@@ -28,11 +28,11 @@
 
     <h2 class="govuk-heading-l">Reporting accessibility problems with Publish teacher training courses</h2>
 
-    <p class="govuk-body">If you think we’re not meeting accessibility requirements, or you’d like to access any information in a different format (such as accessible PDF, large print, easy read, audio recording or braille), contact <%= bat_contact_mail_to %>. Include ‘Accessibility issues’ in the subject line of your email.</p>
+    <p class="govuk-body">If you think we're not meeting accessibility requirements, or you'd like to access any information in a different format (such as accessible PDF, large print, easy read, audio recording or braille), contact <%= bat_contact_mail_to %>. Include "Accessibility issues" in the subject line of your email.</p>
 
     <h2 class="govuk-heading-l">Enforcement procedure</h2>
 
-    <p class="govuk-body">The Equality and Human Rights Commission (EHRC) is responsible for enforcing the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018 (the ‘accessibility regulations’). If you’re not happy with how we respond to your complaint, <%= govuk_link_to "contact the Equality Advisory and Support Service (EASS)", t("links.equality_advisory_service") %>.</p>
+    <p class="govuk-body">The Equality and Human Rights Commission (EHRC) is responsible for enforcing the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018 (the 'accessibility regulations'). If you're not happy with how we respond to your complaint, <%= govuk_link_to "contact the Equality Advisory and Support Service (EASS)", t("links.equality_advisory_service") %>.</p>
 
     <p class="govuk-body">This statement was prepared on 19 September 2019. It was last updated on 23 September 2019.</p>
   </div>
