--- a/app/views/find/pages/accessibility.html.erb
+++ b/app/views/find/pages/accessibility.html.erb
@@ -1,4 +1,4 @@
-<%= content_for :page_title, 'Accessibility statement for Find postgraduate teacher training' %>
+<% content_for :page_title, "Accessibility statement for Find postgraduate teacher training" %>
 
 <div class="govuk-width-container">
   <div class="govuk-grid-row">
@@ -17,7 +17,7 @@
       <p class="govuk-body">We've also made the text on the service as simple as possible to understand.</p>
 
       <p class="govuk-body">
-        <%= govuk_link_to 'AbilityNet', t("links.ability_net") %>
+        <%= govuk_link_to "AbilityNet", t("links.ability_net") %>
         has advice on making your device easier to use if you have a disability.
       </p>
 
@@ -26,14 +26,14 @@
 
       <p class="govuk-body">
         Find postgraduate teacher training is fully compliant with the
-        <%= govuk_link_to 'Web Content Accessibility Guidelines (WCAG) version 2.1', t("links.web_content_accessibility_guidelines") %>
+        <%= govuk_link_to "Web Content Accessibility Guidelines (WCAG) version 2.1", t("links.web_content_accessibility_guidelines") %>
         AA standard.
       </p>
 
       <h3 class="govuk-heading-m">How we tested this service</h3>
       <p class="govuk-body">
         This service was last tested on 16 December 2019. The test was carried out by the
-        <%= govuk_link_to 'Digital Accessibility Centre (DAC)', 'https://digitalaccessibilitycentre.org' %>,
+        <%= govuk_link_to "Digital Accessibility Centre (DAC)", "https://digitalaccessibilitycentre.org" %>,
         using both automated testing tools and a manual user testing team. An accessibility report was issued on 14 January 2020. All issues raised in the report have been resolved.
       </p>
 
