--- a/app/views/find/pages/privacy.html.erb
+++ b/app/views/find/pages/privacy.html.erb
@@ -1,5 +1,4 @@
-<%= content_for :page_title, 'Privacy policy' %>
-
+<% content_for :page_title, "Privacy policy" %>
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
@@ -49,4 +48,3 @@
     <p class="govuk-body">Email <%= bat_contact_mail_to %> if you have any questions about how your personal information will be processed.</p>
   </div>
 </div>
-
