change entity tags

--- a/app/views/find/cookie_preferences/show.html.erb
+++ b/app/views/find/cookie_preferences/show.html.erb
@@ -49,7 +49,7 @@
       <ul class="govuk-list govuk-list--bullet">
         <li>how you got to Find</li>
         <li>the pages you visit on this site and how long you spend on them</li>
-        <li>what you click on while you're visiting the site</li>
+        <li>what you click on while you&#8217;re visiting the site</li>
       </ul>
 
       <table class="govuk-table" aria-describedby="google_analytics_cookies_desc">
