--- a/app/views/find/pages/accessibility.html.erb
+++ b/app/views/find/pages/accessibility.html.erb
@@ -14,7 +14,7 @@
         <li>listen to most of the content on the service using a screen reader (including the most recent versions of JAWS, NVDA and VoiceOver)</li>
       </ul>
 
-      <p class="govuk-body">We've also made the text on the service as simple as possible to understand.</p>
+      <p class="govuk-body">We&#8217;ve also made the text on the service as simple as possible to understand.</p>
 
       <p class="govuk-body">
         <%= govuk_link_to "AbilityNet", t("links.ability_net") %>
@@ -39,13 +39,13 @@
 
       <h3 class="govuk-heading-m">Reporting accessibility problems with this service</h3>
       <p class="govuk-body">
-        If you think we're not meeting accessibility requirements, or you'd like to access any information in a different format (such as accessible PDF, large print, easy read, audio recording or braille), contact
+        If you think we&#8217;re not meeting accessibility requirements, or you&#8217;d like to access any information in a different format (such as accessible PDF, large print, easy read, audio recording or braille), contact
         <%= bat_contact_mail_to(subject: "Accessibility issues") %>.
       </p>
 
       <h3 class="govuk-heading-m">Enforcement procedure</h3>
       <p class="govuk-body">
-        The Equality and Human Rights Commission (EHRC) is responsible for enforcing the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018. If you're not happy with how we respond to your complaint,
+        The Equality and Human Rights Commission (EHRC) is responsible for enforcing the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018. If you&#8217;re not happy with how we respond to your complaint,
         <%= govuk_link_to "contact the Equality Advisory and Support Service (EASS)", t("links.equality_advisory_service") %>.
       </p>
 
