--- a/app/views/find/pages/privacy.html.erb
+++ b/app/views/find/pages/privacy.html.erb
@@ -5,7 +5,7 @@
     <h1 class="govuk-heading-xl">Privacy policy</h1>
 
     <h2 class="govuk-heading-l">Who we are</h2>
-    <p class="govuk-body">This work is being carried out by Department for Education (DfE) Digital, which is a part of DfE. For the purpose of data protection legislation, the DfE is the data controller for the personal data processed as part of 'Find postgraduate teacher training'.</p>
+    <p class="govuk-body">This work is being carried out by Department for Education (DfE) Digital, which is a part of DfE. For the purpose of data protection legislation, the DfE is the data controller for the personal data processed as part of &#8216;Find postgraduate teacher training&#8217;.</p>
 
     <h2 class="govuk-heading-l">How we will use your information</h2>
     <p class="govuk-body">We receive your personal data in the form of your IP address and are processing it in order to track traffic to the service and continuously improve our service to better meet users needs. In some instances, we may also collect your email address for similar purposes. More information about this work is available if you wish to contact us at <%= bat_contact_mail_to %>.</p>
