--- a/app/views/pages/accessibility.html.erb
+++ b/app/views/pages/accessibility.html.erb
@@ -18,7 +18,7 @@
 
     <p class="govuk-body"><%= govuk_link_to "AbilityNet", t("links.ability_net") %> has advice on making your device easier to use if you have a disability.</p>
 
-    <h2 class="govuk-heading-l">Technical information about this service's accessibility</h2>
+    <h2 class="govuk-heading-l">Technical information about this service&#8217;s accessibility</h2>
 
     <p class="govuk-body">The Becoming a Teacher team (DfE) is committed to making Publish teacher training courses accessible, in accordance with the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018.</p>
 
@@ -28,7 +28,7 @@
 
     <h2 class="govuk-heading-l">Reporting accessibility problems with Publish teacher training courses</h2>
 
-    <p class="govuk-body">If you think we're not meeting accessibility requirements, or you'd like to access any information in a different format (such as accessible PDF, large print, easy read, audio recording or braille), contact <%= bat_contact_mail_to %>. Include "Accessibility issues" in the subject line of your email.</p>
+    <p class="govuk-body">If you think we&#8217;re not meeting accessibility requirements, or you'd like to access any information in a different format (such as accessible PDF, large print, easy read, audio recording or braille), contact <%= bat_contact_mail_to %>. Include &#8216;Accessibility issues&#8217; in the subject line of your email.</p>
 
     <h2 class="govuk-heading-l">Enforcement procedure</h2>
 
