--- a/app/views/pages/privacy.html.erb
+++ b/app/views/pages/privacy.html.erb
@@ -5,7 +5,7 @@
     <h1 class="govuk-heading-xl">Privacy policy</h1>
 
     <h2 class="govuk-heading-l">Who we are</h2>
-    <p class="govuk-body">This work is being carried out by Department for Education (DfE) Digital, which is a part of DfE. For the purpose of data protection legislation, the DfE is the data controller for the personal data processed as part of 'Publish teacher training courses'.</p>
+    <p class="govuk-body">This work is being carried out by Department for Education (DfE) Digital, which is a part of DfE. For the purpose of data protection legislation, the DfE is the data controller for the personal data processed as part of &#8216;Publish teacher training courses&#8217;.</p>
 
     <h2 class="govuk-heading-l">What personal information we will&nbsp;store</h2>
     <p class="govuk-body">For all users, we will store:</p>
@@ -19,7 +19,7 @@
     <ul class="govuk-list govuk-list--bullet">
       <li>name</li>
       <li>email address</li>
-      <li>personal information such as the name and email of a contact person at your training provider or school, if you choose to share this in a course listing you post to 'Publish teacher training courses'</li>
+      <li>personal information such as the name and email of a contact person at your training provider or school, if you choose to share this in a course listing you post to &#8216;Publish teacher training courses&#8217;</li>
     </ul>
 
     <h2 class="govuk-heading-l">How we will use your information</h2>
@@ -27,7 +27,7 @@
       We process your anonymised Internet Protocol (IP) address in order to track traffic to the service and continuously improve our service to better meet users needs.
     </p>
     <p class="govuk-body">
-      Personally identifiable contact information that is published in course listings may be passed on to a third party that will use our course listing data (UCAS) via an application programming interface (API), as described in our Terms and Conditions, in order to feed their postgraduate teacher training application system. Any personal information provided in a course listing will be subject to the third party's (UCAS) data handling obligations. We are not responsible for how a third party handles any personal information you choose to include in a course listing.
+      Personally identifiable contact information that is published in course listings may be passed on to a third party that will use our course listing data (UCAS) via an application programming interface (API), as described in our Terms and Conditions, in order to feed their postgraduate teacher training application system. Any personal information provided in a course listing will be subject to the third party&#8217;s (UCAS) data handling obligations. We are not responsible for how a third party handles any personal information you choose to include in a course listing.
     </p>
 
     <h2 class="govuk-heading-l">Why our use of your personal data is&nbsp;lawful</h2>
@@ -49,7 +49,7 @@
       <li>
         for security purposes: our contracted suppliers collect part of the IP addresses of people visiting the Publish teacher training courses website (for example, if we were receiving continuous direct denial of service attacks from an IP address range then we could block it)
       </li>
-      <li>to enable users to use the service and receive updates: our contracted suppliers collect the names and emails of those publishing course listings on 'Publish teacher training courses'</li>
+      <li>to enable users to use the service and receive updates: our contracted suppliers collect the names and emails of those publishing course listings on &#8216;Publish teacher training courses&#8217;</li>
     </ul>
 
     <h2 class="govuk-heading-l">How long we will keep your personal&nbsp;data</h2>
@@ -77,17 +77,17 @@
       If you need to contact us regarding any of the above, please do so via the DfE site at: <%= govuk_link_to "https://www.gov.uk/contact-dfe", "https://www.gov.uk/contact-dfe" %>.
     </p>
     <p class="govuk-body">
-      You can <%= govuk_link_to "find out more about your data protection rights", "https://ico.org.uk/for-organisations/guide-to-data-protection/principle-6-rights" %> on the Information Commissioner's website.
+      You can <%= govuk_link_to "find out more about your data protection rights", "https://ico.org.uk/for-organisations/guide-to-data-protection/principle-6-rights" %> on the Information Commissioner&#8217;s website.
     </p>
 
     <h2 class="govuk-heading-l">The right to lodge a complaint</h2>
     <p class="govuk-body">
-      You have the right to raise any concerns with the Information Commissioner's Office (ICO) via their website at <%= govuk_link_to "https://ico.org.uk/make-a-complaint/", "https://ico.org.uk/make-a-complaint/" %></a>.
+      You have the right to raise any concerns with the Information Commissioner&#8217;s Office (ICO) via their website at <%= govuk_link_to "https://ico.org.uk/make-a-complaint/", "https://ico.org.uk/make-a-complaint/" %></a>.
     </p>
 
     <h2 class="govuk-heading-l">Contact information</h2>
     <p class="govuk-body">
-      If you have any questions about how your personal information will be used, please contact us at <%= bat_contact_mail_to %> and enter data privacy as a reference. For the Data Protection Officer (DPO) please contact us via gov.uk and mark it for the attention of the 'DPO'.
+      If you have any questions about how your personal information will be used, please contact us at <%= bat_contact_mail_to %> and enter data privacy as a reference. For the Data Protection Officer (DPO) please contact us via gov.uk and mark it for the attention of the &#8216;DPO&#8217;.
     </p>
 
     <h2 class="govuk-heading-l">Last updated</h2>
