more entity tags

--- a/app/views/find/pages/privacy.html.erb
+++ b/app/views/find/pages/privacy.html.erb
@@ -37,7 +37,7 @@
 
     <h2 class="govuk-heading-l">The right to lodge a complaint</h2>
     <p class="govuk-body">
-      You have the right to raise any concerns with the Information Commissioner's Office (ICO) via their website at
+      You have the right to raise any concerns with the Information Commissioner&#8217;s Office (ICO) via their website at
       <%= govuk_link_to t("links.ico_complaint"), t("links.ico_complaint") %>.
     </p>
 
