--- a/app/views/pages/accessibility.html.erb
+++ b/app/views/pages/accessibility.html.erb
@@ -28,11 +28,11 @@
 
     <h2 class="govuk-heading-l">Reporting accessibility problems with Publish teacher training courses</h2>
 
-    <p class="govuk-body">If you think we&#8217;re not meeting accessibility requirements, or you'd like to access any information in a different format (such as accessible PDF, large print, easy read, audio recording or braille), contact <%= bat_contact_mail_to %>. Include &#8216;Accessibility issues&#8217; in the subject line of your email.</p>
+    <p class="govuk-body">If you think we&#8217;re not meeting accessibility requirements, or you&#8217;d like to access any information in a different format (such as accessible PDF, large print, easy read, audio recording or braille), contact <%= bat_contact_mail_to %>. Include &#8216;Accessibility issues&#8217; in the subject line of your email.</p>
 
     <h2 class="govuk-heading-l">Enforcement procedure</h2>
 
-    <p class="govuk-body">The Equality and Human Rights Commission (EHRC) is responsible for enforcing the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018 (the 'accessibility regulations'). If you're not happy with how we respond to your complaint, <%= govuk_link_to "contact the Equality Advisory and Support Service (EASS)", t("links.equality_advisory_service") %>.</p>
+    <p class="govuk-body">The Equality and Human Rights Commission (EHRC) is responsible for enforcing the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018 (the 'accessibility regulations'). If you&#8217;re not happy with how we respond to your complaint, <%= govuk_link_to "contact the Equality Advisory and Support Service (EASS)", t("links.equality_advisory_service") %>.</p>
 
     <p class="govuk-body">This statement was prepared on 19 September 2019. It was last updated on 23 September 2019.</p>
   </div>
