--- a/app/views/pages/accessibility.html.erb
+++ b/app/views/pages/accessibility.html.erb
@@ -14,7 +14,7 @@
       <li>listen to most of the content on the service using a screen reader (including the most recent versions of JAWS, NVDA and VoiceOver)</li>
     </ul>
 
-    <p class="govuk-body">We've also made the text on the service as simple as possible to understand.</p>
+    <p class="govuk-body">We&#8217;ve also made the text on the service as simple as possible to understand.</p>
 
     <p class="govuk-body"><%= govuk_link_to "AbilityNet", t("links.ability_net") %> has advice on making your device easier to use if you have a disability.</p>
 
