[0383] Amended js and css for autocomplete

--- a/app/assets/stylesheets/find_application.scss
+++ b/app/assets/stylesheets/find_application.scss
@@ -2,3 +2,5 @@
 @import "./govuk_style_setup";
 @import "components/all";
 @import "js-enabled";
+@import "accessible-autocomplete/dist/accessible-autocomplete.min";
+@import "autocomplete";
