Add summary component component

--- a/app/views/find/courses/show.html.erb
+++ b/app/views/find/courses/show.html.erb
@@ -13,3 +13,5 @@
 </h1>
 
 <p class="govuk-body-l" data-qa='course__description'><%= course.description %></p>
+
+<%= render FindInterface::Courses::SummaryComponent::View.new(course) %>
